// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "checkbox-container",
        },
        "children": Array [
          Node {
            "attribs": Object {
              "type": "checkbox",
            },
            "children": Array [],
            "name": "input",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Node {
              "attribs": Object {
                "class": "checkbox-mask",
              },
              "children": Array [
                Node {
                  "attribs": Object {
                    "class": "icon-check ",
                  },
                  "children": Array [
                    Node {
                      "attribs": Object {
                        "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                      },
                      "children": Array [
                        Node {
                          "attribs": Object {
                            "class": "line1",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": Node {
                            "attribs": Object {
                              "class": "line2",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": null,
                            "parent": [Circular],
                            "prev": [Circular],
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                        Node {
                          "attribs": Object {
                            "class": "line2",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": null,
                          "parent": [Circular],
                          "prev": Node {
                            "attribs": Object {
                              "class": "line1",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": [Circular],
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                      ],
                      "name": "span",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "style": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "style": undefined,
                      },
                    },
                  ],
                  "name": "i",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "class": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "class": undefined,
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "type": undefined,
            },
            "x-attribsPrefix": Object {
              "type": undefined,
            },
          },
          Node {
            "attribs": Object {
              "class": "checkbox-mask",
            },
            "children": Array [
              Node {
                "attribs": Object {
                  "class": "icon-check ",
                },
                "children": Array [
                  Node {
                    "attribs": Object {
                      "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                    },
                    "children": Array [
                      Node {
                        "attribs": Object {
                          "class": "line1",
                        },
                        "children": Array [],
                        "name": "div",
                        "namespace": "http://www.w3.org/1999/xhtml",
                        "next": Node {
                          "attribs": Object {
                            "class": "line2",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": null,
                          "parent": [Circular],
                          "prev": [Circular],
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "class": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "class": undefined,
                        },
                      },
                      Node {
                        "attribs": Object {
                          "class": "line2",
                        },
                        "children": Array [],
                        "name": "div",
                        "namespace": "http://www.w3.org/1999/xhtml",
                        "next": null,
                        "parent": [Circular],
                        "prev": Node {
                          "attribs": Object {
                            "class": "line1",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": [Circular],
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "class": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "class": undefined,
                        },
                      },
                    ],
                    "name": "span",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "style": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "style": undefined,
                    },
                  },
                ],
                "name": "i",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "class": undefined,
                },
                "x-attribsPrefix": Object {
                  "class": undefined,
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Node {
              "attribs": Object {
                "type": "checkbox",
              },
              "children": Array [],
              "name": "input",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "type": undefined,
              },
              "x-attribsPrefix": Object {
                "type": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {
            "class": "text ",
          },
          "children": Array [
            Node {
              "data": "Buenos Aires",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Node {
            "attribs": Object {},
            "children": Array [
              Node {
                "data": "
        label {
          --checkbox-size: 1.125rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: &#x27;&#x27;;
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: &#x27;&#x27;;
          transition: all 0.25s ease;
        }
      ",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "style",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "style",
            "x-attribsNamespace": Object {},
            "x-attribsPrefix": Object {},
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {
          "class": "text ",
        },
        "children": Array [
          Node {
            "data": "Buenos Aires",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Node {
          "attribs": Object {},
          "children": Array [
            Node {
              "data": "
        label {
          --checkbox-size: 1.125rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: &#x27;&#x27;;
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: &#x27;&#x27;;
          transition: all 0.25s ease;
        }
      ",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "style",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "style",
          "x-attribsNamespace": Object {},
          "x-attribsPrefix": Object {},
        },
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "checkbox-container",
          },
          "children": Array [
            Node {
              "attribs": Object {
                "type": "checkbox",
              },
              "children": Array [],
              "name": "input",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": Node {
                "attribs": Object {
                  "class": "checkbox-mask",
                },
                "children": Array [
                  Node {
                    "attribs": Object {
                      "class": "icon-check ",
                    },
                    "children": Array [
                      Node {
                        "attribs": Object {
                          "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                        },
                        "children": Array [
                          Node {
                            "attribs": Object {
                              "class": "line1",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": Node {
                              "attribs": Object {
                                "class": "line2",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": null,
                              "parent": [Circular],
                              "prev": [Circular],
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          Node {
                            "attribs": Object {
                              "class": "line2",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": null,
                            "parent": [Circular],
                            "prev": Node {
                              "attribs": Object {
                                "class": "line1",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": [Circular],
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                        ],
                        "name": "span",
                        "namespace": "http://www.w3.org/1999/xhtml",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "style": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "style": undefined,
                        },
                      },
                    ],
                    "name": "i",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "class": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "class": undefined,
                    },
                  },
                ],
                "name": "div",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {
                  "class": undefined,
                },
                "x-attribsPrefix": Object {
                  "class": undefined,
                },
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "type": undefined,
              },
              "x-attribsPrefix": Object {
                "type": undefined,
              },
            },
            Node {
              "attribs": Object {
                "class": "checkbox-mask",
              },
              "children": Array [
                Node {
                  "attribs": Object {
                    "class": "icon-check ",
                  },
                  "children": Array [
                    Node {
                      "attribs": Object {
                        "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                      },
                      "children": Array [
                        Node {
                          "attribs": Object {
                            "class": "line1",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": Node {
                            "attribs": Object {
                              "class": "line2",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": null,
                            "parent": [Circular],
                            "prev": [Circular],
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                        Node {
                          "attribs": Object {
                            "class": "line2",
                          },
                          "children": Array [],
                          "name": "div",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": null,
                          "parent": [Circular],
                          "prev": Node {
                            "attribs": Object {
                              "class": "line1",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": [Circular],
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "class": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "class": undefined,
                          },
                        },
                      ],
                      "name": "span",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "style": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "style": undefined,
                      },
                    },
                  ],
                  "name": "i",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "class": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "class": undefined,
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": Node {
                "attribs": Object {
                  "type": "checkbox",
                },
                "children": Array [],
                "name": "input",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "type": undefined,
                },
                "x-attribsPrefix": Object {
                  "type": undefined,
                },
              },
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
          ],
          "name": "div",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
      Node {
        "attribs": Object {},
        "children": Array [
          Node {
            "data": "
        label {
          --checkbox-size: 1.125rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: &#x27;&#x27;;
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: &#x27;&#x27;;
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: &#x27;&#x27;;
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: &#x27;&#x27;;
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: &#x27;&#x27;;
          transition: all 0.25s ease;
        }
      ",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "style",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Node {
          "attribs": Object {
            "class": "text ",
          },
          "children": Array [
            Node {
              "data": "Buenos Aires",
              "next": null,
              "parent": [Circular],
              "prev": null,
              "type": "text",
            },
          ],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Node {
            "attribs": Object {
              "class": "checkbox-container",
            },
            "children": Array [
              Node {
                "attribs": Object {
                  "type": "checkbox",
                },
                "children": Array [],
                "name": "input",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": Node {
                  "attribs": Object {
                    "class": "checkbox-mask",
                  },
                  "children": Array [
                    Node {
                      "attribs": Object {
                        "class": "icon-check ",
                      },
                      "children": Array [
                        Node {
                          "attribs": Object {
                            "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                          },
                          "children": Array [
                            Node {
                              "attribs": Object {
                                "class": "line1",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": Node {
                                "attribs": Object {
                                  "class": "line2",
                                },
                                "children": Array [],
                                "name": "div",
                                "namespace": "http://www.w3.org/1999/xhtml",
                                "next": null,
                                "parent": [Circular],
                                "prev": [Circular],
                                "type": "tag",
                                "x-attribsNamespace": Object {
                                  "class": undefined,
                                },
                                "x-attribsPrefix": Object {
                                  "class": undefined,
                                },
                              },
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                            Node {
                              "attribs": Object {
                                "class": "line2",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": null,
                              "parent": [Circular],
                              "prev": Node {
                                "attribs": Object {
                                  "class": "line1",
                                },
                                "children": Array [],
                                "name": "div",
                                "namespace": "http://www.w3.org/1999/xhtml",
                                "next": [Circular],
                                "parent": [Circular],
                                "prev": null,
                                "type": "tag",
                                "x-attribsNamespace": Object {
                                  "class": undefined,
                                },
                                "x-attribsPrefix": Object {
                                  "class": undefined,
                                },
                              },
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                          ],
                          "name": "span",
                          "namespace": "http://www.w3.org/1999/xhtml",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "style": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "style": undefined,
                          },
                        },
                      ],
                      "name": "i",
                      "namespace": "http://www.w3.org/1999/xhtml",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "class": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "class": undefined,
                      },
                    },
                  ],
                  "name": "div",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "class": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "class": undefined,
                  },
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "type": undefined,
                },
                "x-attribsPrefix": Object {
                  "type": undefined,
                },
              },
              Node {
                "attribs": Object {
                  "class": "checkbox-mask",
                },
                "children": Array [
                  Node {
                    "attribs": Object {
                      "class": "icon-check ",
                    },
                    "children": Array [
                      Node {
                        "attribs": Object {
                          "style": "display:block;position:relative;width:8px;height:13px;margin-top:-4px;transform:rotate(45deg) scale(0.8)",
                        },
                        "children": Array [
                          Node {
                            "attribs": Object {
                              "class": "line1",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": Node {
                              "attribs": Object {
                                "class": "line2",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": null,
                              "parent": [Circular],
                              "prev": [Circular],
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                          Node {
                            "attribs": Object {
                              "class": "line2",
                            },
                            "children": Array [],
                            "name": "div",
                            "namespace": "http://www.w3.org/1999/xhtml",
                            "next": null,
                            "parent": [Circular],
                            "prev": Node {
                              "attribs": Object {
                                "class": "line1",
                              },
                              "children": Array [],
                              "name": "div",
                              "namespace": "http://www.w3.org/1999/xhtml",
                              "next": [Circular],
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "class": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "class": undefined,
                              },
                            },
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "class": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "class": undefined,
                            },
                          },
                        ],
                        "name": "span",
                        "namespace": "http://www.w3.org/1999/xhtml",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "style": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "style": undefined,
                        },
                      },
                    ],
                    "name": "i",
                    "namespace": "http://www.w3.org/1999/xhtml",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "class": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "class": undefined,
                    },
                  },
                ],
                "name": "div",
                "namespace": "http://www.w3.org/1999/xhtml",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "attribs": Object {
                    "type": "checkbox",
                  },
                  "children": Array [],
                  "name": "input",
                  "namespace": "http://www.w3.org/1999/xhtml",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "type": undefined,
                  },
                  "x-attribsPrefix": Object {
                    "type": undefined,
                  },
                },
                "type": "tag",
                "x-attribsNamespace": Object {
                  "class": undefined,
                },
                "x-attribsPrefix": Object {
                  "class": undefined,
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
          },
        },
        "type": "style",
        "x-attribsNamespace": Object {},
        "x-attribsPrefix": Object {},
      },
    ],
    "name": "label",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Checkbox should work correctly with different sizes 1`] = `
"<div><label class=\\"\\"><div class=\\"checkbox-container\\"><input type=\\"checkbox\\"><div class=\\"checkbox-mask\\"><i class=\\"icon-check \\"><span style=\\"display: block; position: relative; width: 8px; height: 13px; margin-top: -4px; transform: rotate(45deg) scale(0.5);\\"><div class=\\"line1\\"></div><div class=\\"line2\\"></div></span></i></div></div><span class=\\"text \\">mini</span><style>
        label {
          --checkbox-size: .875rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: '';
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: '';
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: '';
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: '';
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: '';
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: '';
          transition: all 0.25s ease;
        }
      </style></label><label class=\\"\\"><div class=\\"checkbox-container\\"><input type=\\"checkbox\\"><div class=\\"checkbox-mask\\"><i class=\\"icon-check \\"><span style=\\"display: block; position: relative; width: 8px; height: 13px; margin-top: -4px; transform: rotate(45deg) scale(0.5);\\"><div class=\\"line1\\"></div><div class=\\"line2\\"></div></span></i></div></div><span class=\\"text \\">small</span><style>
        label {
          --checkbox-size: 1rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: '';
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: '';
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: '';
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: '';
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: '';
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: '';
          transition: all 0.25s ease;
        }
      </style></label><label class=\\"\\"><div class=\\"checkbox-container\\"><input type=\\"checkbox\\"><div class=\\"checkbox-mask\\"><i class=\\"icon-check \\"><span style=\\"display: block; position: relative; width: 8px; height: 13px; margin-top: -4px; transform: rotate(45deg) scale(0.8);\\"><div class=\\"line1\\"></div><div class=\\"line2\\"></div></span></i></div></div><span class=\\"text \\">medium</span><style>
        label {
          --checkbox-size: 1.125rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: '';
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: '';
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: '';
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: '';
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: '';
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: '';
          transition: all 0.25s ease;
        }
      </style></label><label class=\\"\\"><div class=\\"checkbox-container\\"><input type=\\"checkbox\\"><div class=\\"checkbox-mask\\"><i class=\\"icon-check \\"><span style=\\"display: block; position: relative; width: 8px; height: 13px; margin-top: -4px; transform: rotate(45deg);\\"><div class=\\"line1\\"></div><div class=\\"line2\\"></div></span></i></div></div><span class=\\"text \\">large</span><style>
        label {
          --checkbox-size: 1.3rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: '';
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: '';
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: '';
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: '';
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: '';
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: '';
          transition: all 0.25s ease;
        }
      </style></label><label class=\\"\\"><div class=\\"checkbox-container\\"><input type=\\"checkbox\\"><div class=\\"checkbox-mask\\"><i class=\\"icon-check \\"><span style=\\"display: block; position: relative; width: 8px; height: 13px; margin-top: -4px; transform: rotate(45deg);\\"><div class=\\"line1\\"></div><div class=\\"line2\\"></div></span></i></div></div><span class=\\"text \\">xlarge</span><style>
        label {
          --checkbox-size: 1.5rem;
          display: inline-flex;
          justify-content: flex-start;
          align-items: center;
          width: auto;
          cursor: pointer;
          opacity: 1;
        }
        .checkbox-container {
          width: var(--checkbox-size);
          height: var(--checkbox-size);
          border-radius: 9px;
          position: relative;
          opacity: 1;
          z-index: 1;
        }
        .checkbox-mask {
          border-radius: 32%;
          width: 100%;
          height: 100%;
          position: absolute;
          z-index: 50;
          cursor: pointer;
          pointer-events: none;
          box-sizing: border-box;
          transition: all 0.25s ease;
          display: flex;
          align-items: center;
          justify-content: center;
          z-index: -1;
          box-sizing: border-box;
        }
        .checkbox-mask i:not(.icon-check) {
          opacity: 0;
          transition: all 0.25s ease;
          color: #fff;
          font-size: 1.1rem;
          transform: scale(0.5);
        }
        .checkbox-mask:after {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          background: #0070f3;
          transform: scale(0.5);
          border-radius: inherit;
          opacity: 0;
          transition: all 0.25s ease;
          z-index: -1;
        }
        .checkbox-mask:before {
          content: '';
          position: absolute;
          top: 0px;
          left: 0px;
          width: 100%;
          height: 100%;
          border-radius: inherit;
          transition: all 0.25s ease;
          z-index: -1;
          border: 2px solid #eaeaea;
          box-sizing: border-box;
        }

        .checkbox-mask .icon-check {
          opacity: 0;
          z-index: 200;
        }
        .icon-check {
          width: 23px;
          height: 23px;
          display: flex;
          align-items: center;
          justify-content: center;
          transition: all 0.25s ease;
          border-radius: inherit;
        }
        .icon-check span .line1 {
          background: transparent;
          content: '';
          position: absolute;
          width: 8px;
          height: 1px;
          transition: all 0.2s ease;
          border-radius: 5px;
          z-index: 100;
          bottom: 0px;
        }
        .icon-check span .line1:after {
          content: '';
          position: absolute;
          width: 0%;
          height: 2px;
          background: #fff;
          transition: all 0.25s ease;
          border-radius: 5px 0px 0px 5px;
        }
        .icon-check span .line2 {
          bottom: 0px;
          right: 0rem;
          z-index: 100;
          border-radius: 5px;
          background: transparent;
          content: '';
          position: absolute;
          height: 13px;
          border-radius: 5px;
          transition: all 0.2s ease;
          width: 2px;
        }
        .icon-check span .line2:after {
          content: '';
          position: absolute;
          width: 2px;
          height: 0%;
          background: #fff;
          transition: all 0.25s ease;
          bottom: 0px;
          border-radius: 5px 5px 0px 0px;
        }
        .icon-check.active:before {
          width: 8px;
        }
        .icon-check.active:after {
          width: 4px;
        }
        .icon-check.indeterminate span:after {
          position: relative;
          content: '';
          width: 10px;
          height: 2px;
          background: #fff;
          display: block;
        }
        .icon-check.indeterminate span .line1 {
          transform: rotate(-45deg);
          bottom: 0px;
          right: -1px;
          opacity: 0;
          display: none;
        }
        .icon-check.indeterminate span .line2 {
          right: 0px;
          bottom: -0.14rem;
          transform: rotate(45deg);
          transition: all 0.25s ease;
          height: 11px;
          display: none;
        }

        input {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          margin: 0px;
          padding: 0px;
          opacity: 0;
          z-index: 100;
          cursor: pointer;
        }
        input:disabled {
          opacity: 0;
          pointer-events: none;
        }
        input:active ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask {
          background: #eaeaea;
        }
        input:hover ~ .checkbox-mask:before {
          border: 2px solid transparent;
        }
        input:checked:hover ~ .checkbox-mask {
          box-shadow: 0px 3px 15px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask {
          box-shadow: 0px 0px 0px 0px rgba(0, 112,243,0.35);
        }
        input:checked ~ .checkbox-mask i:not(.icon-check) {
          opacity: 1;
          transform: scale(1);
          transition: all 0.25s ease 0.15s;
        }
        input:checked ~ .checkbox-mask .icon-check {
          opacity: 1;
        }
        input:checked ~ .checkbox-mask .icon-check span .line1:after {
          width: 100%;
          transition: all 0.25s ease 0.1s;
        }
        input:checked ~ .checkbox-mask .icon-check span .line2:after {
          transition: all 0.2s ease 0.3s;
          height: 100%;
        }
        input:checked ~ .checkbox-mask:after {
          opacity: 1;
          transform: scale(1);
        }
        input:checked ~ .checkbox-mask:before {
          opacity: 0;
          transform: scale(1.2);
        }
        .text {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          color: #2c3e50;
          font-size: var(--checkbox-size);
          line-height: var(--checkbox-size);
          padding-left: calc(var(--checkbox-size) * 0.57);
          user-select: none;
          cursor: pointer;
        }
        .line-through {
          opacity: 1;
        }
        .text:before {
          position: absolute;
          width: 0px;
          height: 2px;
          background: #999;
          content: '';
          transition: all 0.25s ease;
        }
      </style></label></div>"
`;
